--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -22,10 +22,16 @@ body {
   padding-right: 15px;
 }
 
+.navbar {
+  background: #2bbbd8;
+}
+
 /* Custom page header */
 .header {
   border-bottom: 1px solid #e5e5e5;
   margin-bottom: 10px;
+  background: #2bbbd8;
+
 
   /* Make the masthead heading the same height as the navigation */
   h3 {
@@ -34,6 +40,16 @@ body {
     line-height: 40px;
     padding-bottom: 19px;
   }
+}
+
+.navbar {
+  margin-bottom:0;
+  border:none;
+}
+
+.navbar-brand {
+  height:inherit;
+  padding: 10px 15px;
 }
 
 /* Custom page footer */
@@ -67,6 +83,9 @@ body {
   }
 }
 
+.navbar-brand img {
+  max-width:135px;
+}
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
@@ -89,3 +108,63 @@ body {
     border-bottom: 0;
   }
 }
+
+/* jobs page */
+#filter-bar {
+  padding-bottom: 20px;
+}
+
+.job-panel input {
+  border:none;
+  background: none;
+  padding: 0;
+}
+
+.job-panel .panel-heading {
+  display:flex;
+  background: #6cd0e4;
+}
+
+.job-panel .panel-heading input {
+  font-size: large;
+}
+
+.job-panel textarea {
+  border:none;
+  padding:0;
+}
+
+.job-panel .dateModified {
+  margin-top:auto;
+  margin-bottom:auto;
+  font-style: italic;
+}
+
+.job-panel .panel-heading input {
+  font-weight:bold;
+}
+
+.job-panel .admin-list-start {
+  text-align: center;
+  font-weight: bold;
+}
+
+.job-panel .subjects-list-item {
+  display: flex;
+}
+
+.job-panel .list-group-item label {
+  padding-right: 5px;
+}
+
+.job-panel .select-dropdown {
+  width: 100%;
+  margin-top:auto;
+  margin-bottom:auto;
+}
+
+.job-panel .reign-in {
+  width: inherit;
+}
+
+
