--- a/app/views/templates/privateJob.html
+++ b/app/views/templates/privateJob.html
@@ -18,7 +18,7 @@
 	</li>
 	<li class="list-group-item">
 		<label>Note:</label>
-		<input type="text" ng-model="job.comment" class="form-control" ng-change="jobs.$save(job)">
+		<input type="text" ng-model="jbs[key].comment" class="form-control" ng-change="save(key)">
 	</li>
 </ul>
 
