--- a/app/views/templates/job.html
+++ b/app/views/templates/job.html
@@ -7,12 +7,12 @@
 	<div class="public-job-details">
 		<!-- title -->
 		<div class = "panel-heading">
-			<input type="text" class="form-control" ng-model="job.title" ng-change="$parent.jobs.$save(job)">		
+			<input type="text" class="form-control" ng-model="job_.title" ng-change="$save()">		
 		</div>
 
 		<!-- description -->
 		<div class = "panel-body">
-			<textarea ng-model="job.longDesc" class="form-control" ng-change="jobs.$save(job)"></textarea>
+			<textarea ng-model="job_.longDesc" class="form-control" ng-change="save()"></textarea>
 
 			<!-- toggle to see more job details -->
 			<button class="btn btn-link" ng-click="coll()">{{readMore}}</button>		
@@ -25,8 +25,8 @@
 
 				<!-- subjects -->
 				<li class="list-group-item subjects-list-item">
-					<span class="select-dropdown"><label>Subjects:</label>{{job.subjects | json }}</span>
-					<select ng-model="job.subjects" ng-options="s for s in subjects" class="form-control reign-in">
+					<span class="select-dropdown"><label>Subjects:</label>{{job_.subjects | json }}</span>
+					<select ng-model="job_.subjects" ng-change="save()" ng-options="s for s in subjects" class="form-control reign-in">
 						<option value="">Choose one or more subjects</option>
 					</select>
 				</li>
@@ -34,25 +34,25 @@
 				<!-- pay -->
 				<li class="list-group-item">
 					<label>Pay:</label>
-					<input type="text" ng-model="job.pay" ng-change="jobs.$save(job)">
+					<input type="text" ng-model="job_.pay" ng-change="save()">
 				</li>
 
 				<!-- location -->
 				<li class="list-group-item">
 					<label>Location:</label>
-					<input type="text" ng-model="job.locationDesc" class="form-control">
+					<input type="text" ng-model="job_.locationDesc" class="form-control" ng-change="save()">
 				</li>
 
 				<!-- schedule -->
 				<li class="list-group-item">
 					<label>Schedule:</label>
-					<input type="text" ng-model="job.schedule" class="form-control">
+					<input type="text" ng-model="job_.schedule" class="form-control">
 				</li>
 
 				<!-- ages -->
 				<li class="list-group-item subjects-list-item">
-					<span class="select-dropdown"><label>Student Age:</label>{{job.age}}</span>
-					<select ng-model="job.age" ng-options="s for s in ages track by s" class="reign-in form-control">
+					<span class="select-dropdown"><label>Student Age:</label>{{job_.age}}</span>
+					<select ng-model="job_.age" ng-change="save()" ng-options="s for s in ages track by s" class="reign-in form-control">
 						<option value="">Choose an age group</option>
 					</select>
 				</li>
@@ -60,13 +60,13 @@
 				<!-- number of students -->
 				<li class="list-group-item">
 					<label>Number of students:</label>
-					<input type="text" ng-model="job.numStudents" ng-change="jobs.$save(job)">
+					<input type="text" ng-model="job_.numStudents" ng-change="save()">
 				</li>
 
 				<!-- city -->
 				<li class="list-group-item subjects-list-item">
-					<span class="select-dropdown"><label>City:</label>{{job.city}}</span>
-					<select ng-model="job.city" ng-options="c for c in cities track by c" class="reign-in form-control">
+					<span class="select-dropdown"><label>City:</label>{{job_.city}}</span>
+					<select ng-model="job_.city" ng-change="save()" ng-options="c for c in cities track by c" class="reign-in form-control">
 						<option value="">Choose a city</option>
 					</select>
 				</li>
@@ -82,12 +82,12 @@
 
 		<!-- begin APPLICANTS -->
 		<!-- APPLICANTS --> 
-		<table class="table job-applicants" ng-if="job.applicants">
+		<table class="table job-applicants">
 			<thead>
 				<tr><th class="admin-list-start">Applicants</th></tr>
 			</thead>
 			<tbody>
-				<tr ng-repeat="app in job.applicants">
+				<tr ng-repeat="app in job_.applicants">
 					<td ng-bind="app.id"></td>
 					<td>{{app.dateApplied | date:'MM/dd/yy'}}</td>
 				</tr>
@@ -100,7 +100,7 @@
 			<li class="list-group-item admin-list-start">Admin Details</li>
 			<li class="list-group-item subject-list-item">
 				<span class="select-dropdown"><label>Fee:</label></span>
-				<input type="text" ng-model="job.fee" class="form-control" ng-change="jobs.$save(job)">
+				<input type="text" ng-model="job_.fee" class="form-control" ng-change="save()">
 			</li>
 			<li class="list-group-item">
 				<!-- drop down of contacts to feed into function -->
@@ -108,14 +108,14 @@
 				fun({{job.contact}) { returns contact info }
 			</li>
 			<li class="list-group-item subjects-list-item">
-				<span class="select-dropdown"><label>Status:</label>{{job.status}}</span>
-				<select ng-model="job.status" class="reign-in form-control" ng-options="s for s in jobStatuses track by s">
+				<span class="select-dropdown"><label>Status:</label>{{job_.status}}</span>
+				<select ng-model="job_.status" class="reign-in form-control" ng-change="save()" ng-options="s for s in jobStatuses track by s">
 					<option value="">Status</option>
 				</select>	
 			</li>
 			<li class="list-group-item">
 				<label>Note:</label>
-				<input type="text" ng-model="jbs[key].comment" class="form-control" ng-change="save(key)">
+				<input type="text" ng-model="job_.comment" class="form-control" ng-change="save()">
 			</li>
 		</ul>
 		
@@ -126,10 +126,10 @@
 	<div class = "panel-footer">
 		<div class="btn-group" role="group" aria-label="...">
 			<button type="button" class="btn btn-primary">Apply</button>			
-			<button type="button" class="btn btn-danger" ng-click="$parent.jobs.$remove(key)">Delete Permanently</button>
+			<button type="button" class="btn btn-danger" ng-click="job_.$remove()">Delete Permanently</button>
 		</div>
 		<span class="dateModified pull-right">
-			Updated on {{job.dateModified | date:'MM/dd/yy'}}
+			Updated on {{job_.dateModified | date:'MM/dd/yy'}}
 		</span>
 	</div>	
 	<!-- end FOOTER -->
