--- a/app/views/templates/job.html
+++ b/app/views/templates/job.html
@@ -7,7 +7,7 @@
 	<div class="public-job-details">
 		<!-- title -->
 		<div class = "panel-heading">
-			<input type="text" class="form-control" ng-model="job_.title" ng-change="$save()">		
+			<input type="text" class="form-control" ng-model="job_.title" ng-change="save()">		
 		</div>
 
 		<!-- description -->
