--- a/app/views/register.html
+++ b/app/views/register.html
@@ -1,21 +1,25 @@
-<h1>Register<br><small>All fields are required</small></h1>
+<h1>Register<br><small>* Indicates required field</small></h1>
 
-<form novalidate ng-submit="register()">
+<form name="registerForm" id="registerForm" class="ll-forms" novalidate ng-submit="register()">
 	<div class="form-group">
-		<label>Name</label>
-		<input ng-model="usr.name" type="text" class="form-control" autofocus>
+		<label>First Name *</label>
+		<input ng-model="usr.firstName" type="text" class="form-control" autofocus minlength="3" maxlength="15" required ng-pattern="/^[a-zA-Z]*$/">
 	</div>
 	<div class="form-group">
-		<label>Email</label>
-		<input ng-model="usr.email" type="email" class="form-control">
+		<label>Last Name</label>
+		<input ng-model="usr.lastName" type="text" class="form-control">
 	</div>
 	<div class="form-group">
-		<label>Password</label>
-		<input ng-model="usr.password" type="password" class="form-control">
+		<label>Email *</label>
+		<input ng-model="usr.email" type="email" class="form-control" required ng-pattern="/^[a-z0-9!#$%&'*+/=?^_`{|}~.-]+@[a-z0-9-]+.[a-z0-9-]/">
 	</div>
 	<div class="form-group">
-		<label>Confirm Password</label>
-		<input ng-model="usr.confPassword" type="password" class="form-control">
+		<label>Password *</label>
+		<input ng-model="usr.password" type="password" class="form-control" required minlength="5">
 	</div>
-	<button type="submit" class="btn btn-default">Register</button>
+	<div class="form-group">
+		<label>Confirm Password *</label>
+		<input ng-model="usr.confPassword" type="password" class="form-control" required ng-pattern="{{usr.password}}">
+	</div>
+	<button type="submit" class="btn btn-default" ng-disabled="registerForm.$invalid">Register</button>
 </form>
