--- a/app/views/users.html
+++ b/app/views/users.html
@@ -1,8 +1,13 @@
+<div class="page-header">
+	<h1>Users</button>
+</h1>
 
+
+</div>
 <div class="container" ng-repeat="user in users">
 	
 	<!-- teacher specific --> 
-	<img src="/uploads/avatars/{{user.img}}" alt="img"/>
+	<img src="/images/yeoman.png" alt="img"/>
 
 	<!-- all users -->
 	<div>{{user.fullName}}</div>
