--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -1,7 +1,8 @@
 <div class="page-header">
-	<h1>User Profile</h1>
-</h1>
+	<h1>User Profile</h1></h1>
 </div>
+
+{{user}}
 
 <div class = "container profile">
 	<div class = "profile-top-box">
@@ -42,7 +43,7 @@
 			<ul>
 				<li>{{wechat}}</li>
 				<li>{{phone}}</li>
-				<li>{{email}}</li>
+				<li>{{user.email}}</li>
 			</ul>
 		</div>
 		<div class = "applied-for"></div>
