--- a/app/views/users.html
+++ b/app/views/users.html
@@ -1,30 +1,26 @@
 <div class="page-header">
-	<h1>Users</button>
-</h1>
-
-
+	<h1>Users</button></h1>
 </div>
-<div class="container" ng-repeat="user in users">
 	
-	<!-- teacher specific --> 
-	<img src="/images/yeoman.png" alt="img"/>
+	<table class="table">
+		<thead>
+			<tr>
+				<th>username</th>
+				<th>email</th>
+				<th>name</th>
+				<th>roles</th>
+				<th>date joined</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr ng-repeat="(name, user) in users" ng-click="view_profile(user.$id)">
+				<td>{{user.$id}}</td>
+				<th>{{user.email}}</th>
+				<td>{{user.first_name}} {{user.last_name}}</td>
+				<td></td>
+				<td>{{user.date_joined | date:'MM/dd/yy'}}</td>
+			</tr>
+		</tbody>
+	</table>
 
-	<!-- all users -->
-	<div>{{user.fullName}}</div>
-	<div>{{user.contact | json }}</div>
-	<div>{{user.dateJoined | date:'MM/dd/yy'}}</div>
-	<div>{{user.lastLogin | date:'MM/dd/yy' }}</div>
-
-	<!-- teacher specific -->
-	<!-- should all be editable -->
-	<div>{{user.country}}</div>
-	<div>{{user.education | json }}</div>
-	<div><a href="{{user.linkedIn}}">LinkedIn</a></div>
-
-	<!-- all users -->
-	<div><ll-lessons id="{{user.id}}"/></div>
-	<div>{{user.bank | json}}</div>
-	<div>{{user.schedule | json}}</div>
-</div>
-
-{{sth}}
+	
