--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
 <div class="jumbotron" id="front_jumbotron">
   <h1><a href="#/jobs">Show me jobs.</a></h1>
-  <h1><a href="#">Show me teachers.</a></h1>
-  <h1><a href="#">Request a teacher</a></h1>
+  <h1><a href="#/users">Show me teachers.</a></h1>
+  <h1><a href="#">Request a teacher.</a></h1>
 </div>
