--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -5,13 +5,20 @@
 		border-radius: 4px;
 		width:100%;
 	}
+	.profile-head-text .label {
+		margin-left:-100px;
+	}
 	.profile-boxes {
 		border-radius: 4px;
 		border: 1px solid #ddd;
 		margin-bottom:5px;	
-		padding: 8px;	
+		padding: 8px;
+		display: inline-block;
+		width: 100%;
+		text-align:center;
 	}
-	.profile-avatar {
+	.profile-head-text img {
+		padding-right: 5px;
 	}
 	.profile-container {
 		width: auto;
@@ -20,7 +27,6 @@
 	.profile-top-fields {
 	  border-radius: 2px;
 	  width: 100%;
-	  text-align: center;
 	  margin-bottom: 10px;
 	}
 	.profile-top-fields ul {
@@ -32,6 +38,16 @@
 		padding:10px;  
 		width:100%;
 		background: #f5f5f5;
+	}
+	.profile-avatar img {
+		max-height: 1350px;
+
+	}
+	.ll-glyph {
+		max-width:22px;
+	}
+	.profile-boxes li {
+		list-style: none;
 	}
 	.profile-top-fields .fields-value {
 		font-weight:bold;
@@ -46,17 +62,18 @@
 </style>
 
 <div class="page-header">
-	<h1>User Profile</h1></h1>
+	<h1>User Profile<button class="btn btn-primary pull-right" ng-click="go_to_edit()">Edit</button>
+	</h1>
 </div>
 
 <div class = "profile-container clearfix">
 	<div class = "profile-top-box">
 		<!-- at large res, float; at small res put on top -->
 		<div class = "profile-avatar profile-boxes col-lg-5 col-md-5 col-sm-5 col-xs-12">
-			<img src="/images/blank_teacher.png"/>
+			<img src="{{user.avatar.data}}"/>
 		</div>
 		<div class = "profile-top-info profile-boxes col-lg-7 col-md-7 col-sm-7 col-xs-12">
-			<div class = "profile-head-text">{{user.first_name}} {{user.last_name}}</div>
+			<div class = "profile-head-text">{{user.first_name}}</div>
 			<div class = "profile-top-fields">
 				<ul>
 					<li class="profile-location">
@@ -64,44 +81,99 @@
 							{{ 'Location' | uppercase}}
 						</span><br/>
 						<span class="fields-value">
-							{{ 'Dongzhimen' | uppercase}}
+							{{ user.location | uppercase}}
 						</span>
 					</li>
-					<li class="profile-country-of-origin">USA</li>
-					<li class="profile-last-login">Wednesday</li>
-					<li class="profile-ethnicity">White</li>
+					<li class="profile-country-of-origin">
+						<span class="fields-name">
+							{{ 'country' | uppercase }}
+						</span><br />
+						<span class="fields-value">
+							{{ user.nationality | uppercase }}
+						</span>
+					</li>
+					<li class="profile-last-login">
+						<span class="fields-name">
+							{{ 'last login' | uppercase }}
+						</span><br />
+						<span class="fields-value">
+							{{ user.last_login | date:'MM/dd/yy' }}
+						</span>
+					</li>
+					<li class="profile-date-joined">
+						<span class="fields-name">
+							{{ 'date joined' | uppercase }}
+						</span><br />
+						<span class="fields-value">
+							{{ user.date_joined | date:'MM/dd/yy' }}
+						</span>
+					</li>
+					<li class="profile-ethnicity">
+						<span class="fields-name">
+							{{ 'ethnicity' | uppercase }}
+						</span><br />
+						<span class="fields-value">
+							{{ user.ethnicity | uppercase }}
+						</span>
+					</li>
 				</ul>
 			</div>
-		</div>
-		<!-- either subjects learned (student) / subjects taught (teacher) -->
-		<div class = "profile-subjects profile-boxes">
-			<div class="profile-head-text">Subjects</div>
-		</div>
-		<div class = "mid-level-info">
-			<ul>
-				<!-- either english or chinese depending on user type -->
-				<li class="profile-language-ability"></li>
-				<!-- either teacher preference or students age -->
-				<li class = "profile-student-age"></li>
-			</ul>
-		</div>
-		<div class = "edu-info">
-			<ul ng-repeat="edu in education">
-				<li>{{edu.uni}}</li>
-				<li>{{edu.degree}}</li>
-				<li>{{edu.major}}</li>
-			</ul>
-		</div>
+		</div>		
 	</div>
+	<!-- either subjects learned (student) / subjects taught (teacher) -->
+	<div class = "profile-subjects profile-boxes">
+		<div class="profile-head-text">
+			<img src="images/glyphicons-153-check.png" alt="" />Subjects
+		</div>
+		<span ng-repeat="(key,val) in user.subjects">
+			{{key | capitalizeFirst }}{{$last ? '' : ', '}}
+		</span>
+	</div>
+
+	<div class = "profile-contact profile-boxes profile-top-fields">
+		<div class="profile-head-text">
+			<span class="label label-default pull-right">Private</span>
+			Contact
+		</div>
+		<ul class="">
+			<li ng-repeat="(name, value) in user.contact">
+				<span class="fields-name">{{name | uppercase }}</span><br/>
+				<span class="fields-value">{{value}}</span>
+			</li>
+		</ul>
+	</div>
+
+	<div class = "profile-docs profile-boxes profile-top-fields">
+		<div class="profile-head-text">
+			<span class="label label-default pull-right">Private</span>
+			Documents
+		</div>
+			<li>
+				<span class="fields-name"></span><br/>
+				<span class="fields-value"></span>
+			</li>
+	</div>
+
+	<div class = "mid-level-info">
+		<ul>
+			<!-- either english or chinese depending on user type -->
+			<li class="profile-language-ability"></li>
+			<!-- either teacher preference or students age -->
+			<li class = "profile-student-age"></li>
+		</ul>
+	</div>
+
+	<div class = "edu-info">
+		<ul ng-repeat="edu in education">
+			<li>{{edu.uni}}</li>
+			<li>{{edu.degree}}</li>
+			<li>{{edu.major}}</li>
+		</ul>
+	</div>
+
 	<div class = "private-info">
 		<div class = "associated-with"></div>
-		<div class = "contact-info">
-			<ul>
-				<li>{{wechat}}</li>
-				<li>{{phone}}</li>
-				<li>{{user.email}}</li>
-			</ul>
-		</div>
+		
 		<div class = "applied-for"></div>
 		<div class = "owes-owed"></div>
 		<div class = "total-in-total-out"></div>
