--- a/app/views/users.html
+++ b/app/views/users.html
@@ -13,7 +13,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr ng-repeat="(name, user) in users" ng-click="view_profile(user.$id)">
+			<tr ng-repeat="(name, user) in users | filter: filterText" ng-click="view_profile(user.$id)">
 				<td>{{user.$id}}</td>
 				<th>{{user.email}}</th>
 				<td>{{user.first_name}} {{user.last_name}}</td>
