--- a/app/views/profile_edit.html
+++ b/app/views/profile_edit.html
@@ -15,7 +15,7 @@
 		<tab heading="Basic">
 			<div class = "form-group">
 				<label>Photo</label><br>
-				<img src = "{{user.avatar.data}}" ng-if="user.avatar"/><br>
+				<img fb-src fp-src="{{user.avatar.data}}"/>
 				<form ng-submit="upload_image(image)">
 					<div class="fb-error" ng-show="error">{{error}}</div>
 					<div class="fb-inputs" ng-hide="image.isUploading">
@@ -64,7 +64,25 @@
 			<label>Map</label>
 
 		</tab>
-		<tab heading="Education"></tab>
+		<tab heading="Education">
+			<h4>University</h4>
+			<div class = "form-group">
+				<label>University Name</label>
+				<input type="text" ng-model="selected" typeahead="college for college in colleges | filter:$viewValue | limitTo:8" class="form-control">
+
+			</div>
+			<div class = "form-group">
+				<label>Area of study</label>
+				<select>					
+				</select>
+			</div>
+			<div class = "form-group">
+				<label>Degree awarded</label>
+				<select class="form-control">
+					<option ng-repeat="d in degrees">{{d | capitalizeFirst}}</option>
+				</select>
+			</div>
+		</tab>
 		<tab heading="Contact">
 			
 		</tab>
@@ -73,5 +91,3 @@
 		</tab>
 	</tabset>	
 </div>
-
-
