--- a/app/views/profile_edit.html
+++ b/app/views/profile_edit.html
@@ -65,16 +65,13 @@
 
 		</tab>
 		<tab heading="Education">
-			<h4>University</h4>
 			<div class = "form-group">
 				<label>University Name</label>
 				<input type="text" ng-model="selected" typeahead="college for college in colleges | filter:$viewValue | limitTo:8" class="form-control">
-
 			</div>
 			<div class = "form-group">
 				<label>Area of study</label>
-				<select>					
-				</select>
+				<input type="text" ng-model="yolo" typeahead="major.major_en_name for major in majors | filter:$viewValue | limitTo:8" class="form-control">			
 			</div>
 			<div class = "form-group">
 				<label>Degree awarded</label>
@@ -83,11 +80,26 @@
 				</select>
 			</div>
 		</tab>
+
 		<tab heading="Contact">
-			
+			<div class="form-group">
+				<label>Phone</label>
+				<input type="tel" class="form-control">
+			</div>
+			<div class="form-group">
+				<label>WeChat</label>
+				<input type="text" class="form-control">
+			</div>
+			<div class="form-group">
+				<label>Email (* can't change *)</label>				
+			</div>
+			<div class="form-group">
+				<label>Address</label>
+				<textarea class="form-control"></textarea>
+			</div>			
 		</tab>
-		<tab heading="Payment">
-			
+
+		<tab heading="Payment">			
 		</tab>
 	</tabset>	
 </div>
