--- a/app/views/profile_edit.html
+++ b/app/views/profile_edit.html
@@ -60,7 +60,6 @@
 				</div>
 			</div>
 			<small>*Cannot be changed</small>
-
 		</tab>
 
 		<tab heading="Work/Study">
@@ -78,23 +77,25 @@
 			</div>
 			<div class="form-group">
 				<label>Chinese / English language level</label>
-				<select class="form-control" ng-model="user.language_ability" ng-change="user.$save()">
+				<select class="form-control" ng-model="user.language_level" ng-change="user.$save()">
 					<option value=""></option>
-					<option ng-repeat="l in language_level" value="l.value">{{l.desc}}</option>
+					<option ng-repeat="l in language_level">{{l.desc}}</option>
 				</select>
 			</div>		
 		</tab>
+
 		<tab heading="Location">
 			<div class = "form-group">
 				<label>City</label>
+				<input ng-model="user.city" typeahead-editable="false" typeahead="cities.indexOf(city) as (cities.indexOf(city) + ' - ' + city.en + ' - ' + city.zh) for city in cities | filter:$viewValue | limitTo:8" class="form-control" typeahead-on-select="user.$save()">
 			</div>
 			<div class = "form-group">
 				<label>Specific Location</label>
 				<input type="text" class="form-control" ng-model="user.location" ng-change="user.$save()" placeholder="Dongzhimen"/>
 			</div>
 			<label>Map</label>
-
 		</tab>
+
 		<tab heading="Education">
 			<div class = "form-group">
 				<label>University Name</label>
