--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -121,7 +121,7 @@
 							{{ 'ethnicity' | uppercase }}
 						</span><br />
 						<span class="fields-value">
-							{{ user.ethnicity | uppercase }}
+							{{ ethnicities[user.ethnicity] | uppercase }}
 						</span>
 					</li>
 					<li class="profile-age">
