--- a/app/views/profile_edit.html
+++ b/app/views/profile_edit.html
@@ -50,7 +50,7 @@
 				<label>Ethnicity</label>
 				<select class="form-control" ng-model="user.ethnicity" ng-change="user.$save()">
 					<option value=""></option>
-					<option ng-repeat="r in races">{{r | capitalizeFirst }}</option>
+					<option ng-repeat="(key, r) in races" value="{{key}}">{{r | capitalizeFirst }}</option>
 				</select>
 			</div>
 			<div class = "form-group">
