--- a/app/views/jobs.html
+++ b/app/views/jobs.html
@@ -9,19 +9,19 @@
 		<div class="form-group">
 			<input type="text" class="form-control" ng-model="filterText.$" placeholder="Search">
 		</div>			
-		<select ng-model="filterText.age" class="reign-in form-control">
+		<select ng-model="filterText.age" class="reign-in form-control" multiple>
 			<option value>Age</option>
 			<option ng-repeat="age in ages">{{age}}</option>
 		</select>				
-		<select ng-model="filterText.subjects" class="form-control reign-in">
+		<select ng-model="filterText.subjects" class="form-control reign-in" multiple>
 			<option value="">Subject</option>
 			<option ng-repeat="subject in subjects">{{ subject | capitalizeFirst }}</option>
 		</select>
 		<select ng-model="filterText.city" class="reign-in form-control">
 			<option value="">City</option>
-			<option ng-repeat="city in cities">{{city | capitalizeFirst }}</option>
+			<option ng-repeat="city in cities">{{ city.en }}</option>
 		</select>
-		<select ng-model="filterText.status" class="form-control">
+		<select ng-model="filterText.status" class="form-control" multiple>
 			<option value="">Status</option>
 			<option ng-repeat="status in statuses">{{status}}</option>
 		</select>
