--- a/app/views/profile_edit.html
+++ b/app/views/profile_edit.html
@@ -6,21 +6,22 @@
 		max-width: 200px;
 		max-height:200px;
 	}
+	.map-canvas { height: 400px; }
 </style>
 
 
 <div class="page-header">
-	<h1>Edit Profile<button class="btn btn-primary pull-right" ng-click="go_to_profile()">View Profile</button></h1>
+	<h1>Edit Profile<button class="btn btn-primary pull-right" ng-click="goToProfile()">View Profile</button></h1>
 </div>
 
 <div class = "edit-profile-container">
-	<tabset vertical="false" type="pills" class="edit-profile-menu">
+	<tabset type="pills" class="edit-profile-menu">
 
 		<tab heading="Basic">
 			<div class = "form-group">
 				<label>Photo</label><br>
 				<img src="{{user.avatar.data}}" class="avatar-img"/>
-				<form ng-submit="upload_image(image)">
+				<form ng-submit="uploadImage(image)">
 					<div class="fb-error" ng-show="error">{{error}}</div>
 					<div class="fb-inputs" ng-hide="image.isUploading">
 						<input class="fb-image-upload" fb-image-upload class="fb-input" type="file" name="image"/>
@@ -33,30 +34,34 @@
 				</form>
 			</div>
 			<div class = "form-group">
-				<label>First Name *</label><br>
-				<span>{{user.first_name}}</span>
+				<label>First Name</label><br>
+				<input type="text" class="form-control" ng-model="user.firstName" ng-change="user.$save()">
 			</div>
 			<div class = "form-group">
-				<label>Last Name</label>
-				<input type="text" class="form-control" ng-model="user.last_name" ng-change="user.$save()">
+				<label>Last Name</label> <span class="label label-default">Private</span>
+				<input type="text" class="form-control" ng-model="user.lastName" ng-change="user.$save()">
 			</div>
 			<div class = "form-group">
+				<label>Chinese Name</label>
+				<input type="text" class="form-control" ng-model="user.chineseName" ng-change="user.$save()">
+			</div>
+			<div class = "form-group country">
 				<label>Country of Citizenship</label>
 				<select class="form-control" ng-model="user.country" ng-change="user.$save()">
-					<option ng-repeat="c in countries">{{c}}</option>
+					<option ng-repeat="c in countries" value="{{$index}}">{{c}}</option>
 				</select>
 			</div>
-			<div class = "form-group">
+			<div class = "form-group ethnicity">
 				<label>Ethnicity</label>
 				<select class="form-control" ng-model="user.ethnicity" ng-change="user.$save()">
 					<option value=""></option>
-					<option ng-repeat="(key, r) in races" value="{{key}}">{{r | capitalizeFirst }}</option>
+					<option ng-repeat="r in races track by $index" value="{{$index}}">{{r | capitalizeFirst }}</option>
 				</select>
 			</div>
-			<div class = "form-group">
-				<label>Birthday</label>
+			<div class = "form-group birthday">
+				<label>Birthday</label> <span class="label label-default">Private</span>
 				<div>
-					<datepicker ng-model="user.birthday" class="well" ng-change="save_date(user.birthday)"></datepicker>
+					<datepicker ng-model="user.birthday" class="well" ng-change="saveDate(user.birthday)"></datepicker>
 				</div>
 			</div>
 			<small>*Cannot be changed</small>
@@ -65,13 +70,13 @@
 		<tab heading="Work/Study">
 			<div class="form-group">
 				<label>Subjects you can teach / you want to study / you have studied<br/><small>Ctrl + click to select more than one </small></label>
-				<select class="form-control" multiple ng-model="user_subjects" ng-change="save_subjects(user_subjects)">
+				<select class="form-control" multiple ng-model="userSubjects" ng-change="saveSubjects(userSubjects)">
 					<option ng-repeat="s in subjects">{{s}}</option>
 				</select>
 			</div>
 			<div class="form-group">
 				<label>Preferred student age / studen't age<br/><small>Ctrl + click to select more than one </small></label>	
-				<select class="form-control" multiple ng-model="user_ages" ng-change="save_ages(user_ages)">
+				<select class="form-control" multiple ng-model="userAges" ng-change="saveAges(userAges)">
 					<option ng-repeat="a in ages">{{a}}</option>
 				</select>
 			</div>
@@ -79,7 +84,7 @@
 				<label>Chinese / English language level</label>
 				<select class="form-control" ng-model="user.language_level" ng-change="user.$save()">
 					<option value=""></option>
-					<option ng-repeat="l in language_level">{{l.desc}}</option>
+					<option ng-repeat="l in languageLevel" value="{{$index}}">{{l.shortDesc}}</option>
 				</select>
 			</div>		
 		</tab>
@@ -91,9 +96,12 @@
 			</div>
 			<div class = "form-group">
 				<label>Specific Location</label>
-				<input type="text" class="form-control" ng-model="user.location" ng-change="user.$save()" placeholder="Dongzhimen"/>
+				<input type="text" class="form-control" ng-model="user.location" ng-change="user.$save()" placeholder="South of Dongzhimen"/>
 			</div>
 			<label>Map</label>
+			<section id="map">
+ 				<div ui-map="myMap" ui-options="mapOptions" class="map-canvas"></div>
+			</section>
 		</tab>
 
 		<tab heading="Education">
@@ -111,24 +119,11 @@
 					<option ng-repeat="d in degrees">{{d | capitalizeFirst}}</option>
 				</select>
 			</div>
-		</tab>
+		</tab>		
 
-		<tab heading="Contact">
-			<div class="form-group">
-				<label>Phone</label>
-				<input type="tel" class="form-control">
-			</div>
-			<div class="form-group">
-				<label>WeChat</label>
-				<input type="text" class="form-control">
-			</div>
-			<div class="form-group">
-				<label>Email (* can't change *)</label>				
-			</div>
-			<div class="form-group">
-				<label>Address</label>
-				<textarea class="form-control"></textarea>
-			</div>			
+		<tab heading="Contact">			
+			<contact-info ng-repeat="contact in contacts" user="{{user.$id}}" pos="{{contact.$id}}"></contact-info>
+			<button ng-click="addContact()" class="btn btn-default pull-right">Add +</button>
 		</tab>
 
 		<tab heading="Payment">
