--- a/app/views/users.html
+++ b/app/views/users.html
@@ -1,5 +1,5 @@
 <div class="page-header">
-	<h1>Users</button></h1>
+	<h1>Users<button class="btn btn-primary pull-right" ng-click="addUser()">New</button></h1>
 </div>
 	
 	<table class="table">
@@ -13,10 +13,10 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr ng-repeat="(name, user) in users | filter: filterText" ng-click="view_profile(user.$id)">
+			<tr ng-repeat="(name, user) in users | filter: filterText" ng-click="viewProfile(user.$id)">
 				<td>{{user.$id}}</td>
 				<th>{{user.email}}</th>
-				<td>{{user.first_name}} {{user.last_name}}</td>
+				<td>{{user.first_name}}</td>
 				<td></td>
 				<td>{{user.date_joined | date:'MM/dd/yy'}}</td>
 			</tr>
